--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     <header>
+      <h1>HELLO</h1>
       <svg
         class="logo"
         xmlns="http://www.w3.org/2000/svg"
