--- a/crew-commander.html
+++ b/crew-commander.html
@@ -87,36 +87,38 @@
       <div class="title">
         <p><span>02</span>Meet your crew</p>
       </div>
-      <div class="crew-image">
-        <img
-          src="./assets/crew/image-douglas-hurley.png"
-          alt="commander image"
-        />
-      </div>
-      <div class="content-wrapper">
-        <ul class="circle-buttons">
-          <li>
-            <a class="active-circle" href="./crew-commander.html"></a>
-          </li>
-          <li>
-            <a href="./crew-specialist.html"></a>
-          </li>
-          <li>
-            <a href="./crew-pilot.html"></a>
-          </li>
-          <li>
-            <a href="./crew-engineer.html"></a>
-          </li>
-        </ul>
+      <div class="content-row">
+        <div class="crew-image">
+          <img
+            src="./assets/crew/image-douglas-hurley.png"
+            alt="commander image"
+          />
+        </div>
+        <div class="content-wrapper">
+          <ul class="circle-buttons">
+            <li>
+              <a class="active-circle" href="./crew-commander.html"></a>
+            </li>
+            <li>
+              <a href="./crew-specialist.html"></a>
+            </li>
+            <li>
+              <a href="./crew-pilot.html"></a>
+            </li>
+            <li>
+              <a href="./crew-engineer.html"></a>
+            </li>
+          </ul>
 
-        <div class="primary-content">
-          <h2>Commander</h2>
-          <h1>Douglas Hurley</h1>
-          <p id="commander">
-            Douglas Gerald Hurley is an American engineer, former Marine Corps
-            pilot and former NASA astronaut. He launched into space for the
-            third time as commander of Crew Dragon Demo-2.
-          </p>
+          <div class="primary-content">
+            <h2>Commander</h2>
+            <h1>Douglas Hurley</h1>
+            <p id="commander">
+              Douglas Gerald Hurley is an American engineer, former Marine Corps
+              pilot and former NASA astronaut. He launched into space for the
+              third time as commander of Crew Dragon Demo-2.
+            </p>
+          </div>
         </div>
       </div>
     </main>
