explore button href

--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
         </p>
       </div>
       <div class="main-cta animate__animated animate__pulse">
-        <button>Explore</button>
+        <button onclick="location.href='./destination-moon.html'">
+          Explore
+        </button>
       </div>
     </section>
 
