owl carousel implemented

--- a/crew-commander.html
+++ b/crew-commander.html
@@ -14,6 +14,14 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <link rel="stylesheet" href="owl.carousel.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+      integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Space tourism website</title>
   </head>
   <body>
@@ -89,42 +97,195 @@
       <div class="title">
         <p><span>02</span>Meet your crew</p>
       </div>
-      <div class="content-row">
-        <div class="crew-image">
-          <img
-            src="./assets/crew/image-douglas-hurley.png"
-            alt="commander image"
-          />
-        </div>
-        <div class="content-wrapper">
-          <ul class="circle-buttons">
-            <li>
-              <a class="active-circle" href="./crew-commander.html"></a>
-            </li>
-            <li>
-              <a href="./crew-specialist.html"></a>
-            </li>
-            <li>
-              <a href="./crew-pilot.html"></a>
-            </li>
-            <li>
-              <a href="./crew-engineer.html"></a>
-            </li>
-          </ul>
+      <div class="owl-carousel">
+        <div class="content-row">
+          <div class="crew-image">
+            <img
+              src="./assets/crew/image-douglas-hurley.png"
+              alt="commander image"
+            />
+          </div>
+          <div class="content-wrapper">
+            <ul class="circle-buttons">
+              <li>
+                <a class="active-circle" href="./crew-commander.html"></a>
+              </li>
+              <li>
+                <a href="./crew-specialist.html"></a>
+              </li>
+              <li>
+                <a href="./crew-pilot.html"></a>
+              </li>
+              <li>
+                <a href="./crew-engineer.html"></a>
+              </li>
+            </ul>
 
-          <div class="primary-content">
-            <h2>Commander</h2>
-            <h1>Douglas Hurley</h1>
-            <p>
-              Douglas Gerald Hurley is an American engineer, former Marine Corps
-              pilot and former NASA astronaut. He launched into space for the
-              third time as commander of Crew Dragon Demo-2.
-            </p>
+            <div class="primary-content">
+              <h2>Commander</h2>
+              <h1>Douglas Hurley</h1>
+              <p>
+                Douglas Gerald Hurley is an American engineer, former Marine
+                Corps pilot and former NASA astronaut. He launched into space
+                for the third time as commander of Crew Dragon Demo-2.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="content-row">
+          <div class="crew-image">
+            <img
+              id="specialist"
+              src="./assets/crew/image-mark-shuttleworth.png"
+              alt="Mission Specialist image"
+            />
+          </div>
+          <div class="content-wrapper">
+            <ul class="circle-buttons">
+              <li>
+                <a href="./crew-commander.html"></a>
+              </li>
+              <li>
+                <a class="active-circle" href="./crew-specialist.html"></a>
+              </li>
+              <li>
+                <a href="./crew-pilot.html"></a>
+              </li>
+              <li>
+                <a href="./crew-engineer.html"></a>
+              </li>
+            </ul>
+
+            <div class="primary-content">
+              <h2>Mission Specialist</h2>
+              <h1>Mark Shuttleworth</h1>
+              <p>
+                Mark Richard Shuttleworth is the founder and CEO of Canonical,
+                the company behind the Linux-based Ubuntu operating system.
+                Shuttleworth became the first South African to travel to space
+                as a space tourist.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="content-row">
+          <div class="crew-image">
+            <img
+              id="crew-image"
+              src="./assets/crew/image-victor-glover.png"
+              alt="Pilot image"
+            />
+          </div>
+          <div class="content-wrapper">
+            <ul class="circle-buttons">
+              <li>
+                <a href="./crew-commander.html"></a>
+              </li>
+              <li>
+                <a href="./crew-specialist.html"></a>
+              </li>
+              <li>
+                <a class="active-circle" href="./crew-pilot.html"></a>
+              </li>
+              <li>
+                <a href="./crew-engineer.html"></a>
+              </li>
+            </ul>
+
+            <div class="primary-content">
+              <h2>Pilot</h2>
+              <h1>Victor Glover</h1>
+              <p>
+                Pilot on the first operational flight of the SpaceX Crew Dragon
+                to the International Space Station. Glover is a commander in the
+                U.S. Navy where he pilots an F/A-18. He was a crew member of
+                Expedition 64, and served as a station systems flight engineer.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="content-row">
+          <div class="crew-image">
+            <img
+              id="crew-image"
+              src="./assets/crew/image-anousheh-ansari.png"
+              alt="Engineer image"
+            />
+          </div>
+
+          <div class="content-wrapper">
+            <ul class="circle-buttons">
+              <li>
+                <a href="./crew-commander.html"></a>
+              </li>
+              <li>
+                <a href="./crew-specialist.html"></a>
+              </li>
+              <li>
+                <a href="./crew-pilot.html"></a>
+              </li>
+              <li>
+                <a class="active-circle" href="./crew-engineer.html"></a>
+              </li>
+            </ul>
+
+            <div class="primary-content">
+              <h2>Flight Engineer</h2>
+              <h1>Anousheh Ansari</h1>
+              <p>
+                Anousheh Ansari is an Iranian American engineer and co-founder
+                of Prodea Systems. Ansari was the fourth self-funded space
+                tourist, the first self-funded woman to fly to the ISS, and the
+                first Iranian in space.
+              </p>
+            </div>
           </div>
         </div>
       </div>
     </main>
 
+    <!-- MAIN JS -->
     <script src="script.js"></script>
+
+    <!-- JQUERY -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+      integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+
+    <!-- OWL CAROUSEL -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+      integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+
+    <script>
+      $(document).ready(function () {
+        $(".owl-carousel").owlCarousel();
+      });
+
+      $(".owl-carousel").owlCarousel({
+        loop: true,
+        margin: 10,
+        nav: false,
+        dots: false,
+        responsive: {
+          0: {
+            items: 1,
+          },
+          600: {
+            items: 1,
+          },
+          1000: {
+            items: 1,
+          },
+        },
+      });
+    </script>
   </body>
 </html>
