--- a/index.html
+++ b/index.html
@@ -63,26 +63,16 @@
           </li>
         </ul>
       </nav>
-      <svg
-        class="hamburger-menu"
-        xmlns="http://www.w3.org/2000/svg"
-        width="24"
-        height="21"
-      >
-        <g fill="#D0D6F9" fill-rule="evenodd">
-          <path d="M0 0h24v3H0zM0 9h24v3H0zM0 18h24v3H0z" />
-        </g>
-      </svg>
-      <svg
-        class="close-icon"
-        xmlns="http://www.w3.org/2000/svg"
-        width="20"
-        height="21"
-      >
-        <g fill="#D0D6F9" fill-rule="evenodd">
-          <path d="M2.575.954l16.97 16.97-2.12 2.122L.455 3.076z" />
-          <path d="M.454 17.925L17.424.955l2.122 2.12-16.97 16.97z" />
-        </g>
+      <svg class="ham hamRotate ham7" viewBox="0 0 100 100">
+        <path
+          class="line top"
+          d="m 70,33 h -40 c 0,0 -6,1.368796 -6,8.5 0,7.131204 6,8.5013 6,8.5013 l 20,-0.0013"
+        />
+        <path class="line middle" d="m 70,50 h -40" />
+        <path
+          class="line bottom"
+          d="m 69.575405,67.073826 h -40 c -5.592752,0 -6.873604,-9.348582 1.371031,-9.348582 8.244634,0 19.053564,21.797129 19.053564,12.274756 l 0,-40"
+        />
       </svg>
     </header>
     <section class="hero">
